@@ -10,8 +10,8 @@
 	<classpathentry kind="lib" path="3rdparty/ant-launcher.jar"/>
 	<classpathentry kind="lib" path="3rdparty/ant.jar"/>
 	<classpathentry kind="lib" path="3rdparty/qdox-1.6.1.jar"/>
-	<classpathentry kind="var" path="TOOLS15_LIB"/>
 	<classpathentry kind="lib" path="3rdparty/backport-util-concurrent-2.2.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="var" path="TOOLS15_LIB"/>
 	<classpathentry kind="output" path="z_build"/>
 </classpath>
